Pagina spaceship criada

--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -1,78 +1,78 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>SpaceX</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <img src="../Imagens/logo.png"> 
-            |<a>The Spaceships</a> | <a>Hire Us</a>
-        </nav>
-    </header>
+  <head>
+      <meta charset="UTF-8">
+      <title>SpaceX</title>
+  </head>
+  <body>
+      <header>
+          <nav>
+              <img src="../Imagens/logo.png">
+              |<a href="spaceship.html">The Spaceships</a> | <a>Hire Us</a>
+          </nav>
+      </header>
 
-    <hr>
-    
-    <section>
-        <section>
-            <h2>Space Exploration Technologies Corp</h2>
+      <hr>
 
-            <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit accusantium corporis 
-            ipsum autem voluptate id, adipisci obcaecati ipsa modi incidunt porro, deserunt esse labore, 
-            cum reiciendis expedita atque ullam ea.
-            </p>
+      <section>
+          <section>
+              <h2>Space Exploration Technologies Corp</h2>
 
-            <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit accusantium corporis 
-            ipsum autem voluptate id, adipisci obcaecati ipsa modi incidunt porro, deserunt esse labore, 
-            cum reiciendis expedita atque ullam ea.
-            </p>
+              <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit accusantium corporis
+              ipsum autem voluptate id, adipisci obcaecati ipsa modi incidunt porro, deserunt esse labore,
+              cum reiciendis expedita atque ullam ea.
+              </p>
 
-            <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit accusantium corporis 
-            ipsum autem voluptate id, adipisci obcaecati ipsa modi incidunt porro, deserunt esse labore, 
-            cum reiciendis expedita atque ullam ea.
-            </p>
-        </section>
-        <section>
-            <h2>Our Services</h2>
-            <ul>
-                <li>Nam quis nulla. Integer malesuada</li>
-                <li>In in enim a arcu imperdliet malesuada</li>
-                <li>Sed vel lectus Donec odio uma</li>
-                <li>A eneam id metus id velit ullamcorpe pulvinar</li>
-            </ul>
-        </section>
-        <section>
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th>Services</th>
-                        <th>Value</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Nam quis nulla. Integer malesuada</td>
-                        <td>$ 450</td>
-                    </tr>
-                    <tr>
-                        <td>In in enim a arcu imperdliet malesuada</td>
-                        <td>$ 122</td>
-                    </tr>
-                    <tr>
-                        <td>Sed vel lectus Donec odio uma</td>
-                        <td>$ 333</td>
-                    </tr>
-                    <tr>
-                        <td>A eneam id metus id velit ullamcorpe pulvinar</td>
-                        <td>$ 444</td>
-                    </tr>  
-                </tbody>
-            </table>
-        </section>
-    </section>
-</body>
+              <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit accusantium corporis
+              ipsum autem voluptate id, adipisci obcaecati ipsa modi incidunt porro, deserunt esse labore,
+              cum reiciendis expedita atque ullam ea.
+              </p>
+
+              <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit accusantium corporis
+              ipsum autem voluptate id, adipisci obcaecati ipsa modi incidunt porro, deserunt esse labore,
+              cum reiciendis expedita atque ullam ea.
+              </p>
+          </section>
+          <section>
+              <h2>Our Services</h2>
+              <ul>
+                  <li>Nam quis nulla. Integer malesuada</li>
+                  <li>In in enim a arcu imperdliet malesuada</li>
+                  <li>Sed vel lectus Donec odio uma</li>
+                  <li>A eneam id metus id velit ullamcorpe pulvinar</li>
+              </ul>
+          </section>
+          <section>
+              <table border="1">
+                  <thead>
+                      <tr>
+                          <th>Services</th>
+                          <th>Value</th>
+                      </tr>
+                  </thead>
+                  <tbody>
+                      <tr>
+                          <td>Nam quis nulla. Integer malesuada</td>
+                          <td>$ 450</td>
+                      </tr>
+                      <tr>
+                          <td>In in enim a arcu imperdliet malesuada</td>
+                          <td>$ 122</td>
+                      </tr>
+                      <tr>
+                          <td>Sed vel lectus Donec odio uma</td>
+                          <td>$ 333</td>
+                      </tr>
+                      <tr>
+                          <td>A eneam id metus id velit ullamcorpe pulvinar</td>
+                          <td>$ 444</td>
+                      </tr>
+                  </tbody>
+              </table>
+          </section>
+      </section>
+  </body>
 </html>
