Pagina hire_us adicionada

--- a/Codigo/spaceship.html
+++ b/Codigo/spaceship.html
@@ -7,8 +7,8 @@
   <body>
     <header>
         <nav>
-            <img src="../Imagens/logo.png">
-            |<a>The Spaceships</a> | <a>Hire Us</a>
+            <a href="index.html"><img src="../Imagens/logo.png"></a>
+            |<a href="spaceship.html">The Spaceships</a> | <a href="hire_us.html">Hire Us</a>
         </nav>
     </header>
 
